# CPG

./: OGL.cabal  stack.yaml
app/: Main.hs
shaders/: frag.glsl  frag_no_text.glsl  vert.glsl
src/: Core.hs  EventHandler.hs  Lib.hs  OBJReader.hs  SDLib.hs  Utils.hs
src/Data/: GameObject.hs  Mesh.hs  PhysicsData.hs  Scene.hs  Shaders.hs  SkyBox.hs
src/Internal/: Vector.hs
src/MorphGine/Data/: Primitives.hs
src/Physics/: Collision.hs  Mechanics.hs
src/Tasks/: Curve.hs  Swarm.hs
src/Utils/: Quaternions.hs
