name:                OGL
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Antystenes/OGL#readme
license:             BSD3
license-file:        LICENSE
author:              Morgoth
maintainer:          piotradwan@gmail.com
copyright:           2017 Morgoth
category:            MT
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , SDLib
                     , OBJReader
                     , Utils
                     , Utils.Quaternions
                     , Data.Shaders
                     , Data.Mesh
                     , Data.PhysicsData
                     , Data.GameObject
                     , Data.Scene
                     , Physics.Mechanics
                     , Tasks.Swarm
                     , Tasks.Curve
                     , EventHandler
  build-depends:       GLFW-b
                     , OpenGL
                     , OpenGLRaw
                     , base
                     , bytestring
                     , containers
                     , hmatrix
                     , sdl2
                     , sdl2-image
                     , numeric-prelude
                     , hashmap
                     , text
                     , vector
                     , lens
                     , template-haskell
  default-language:    Haskell2010

executable OGL-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       OGL
                     , OpenGLRaw >= 3.2.4.0
                     , base
  default-language:    Haskell2010

test-suite OGL-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       OGL
                     , OpenGLRaw >= 3.2.4.0
                     , base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Antystenes/OGL
